update index for online access from git pages

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>Vue tables stress test</title>
+    <link href=/css/app.666eb4ea.css rel=preload as=style>
+    <link href=/css/chunk-vendors.fe5a90a6.css rel=preload as=style>
+    <link href=/js/app.156f5d05.js rel=preload as=script>
+    <link href=/js/chunk-vendors.7b1fb842.js rel=preload as=script>
+    <link href=/css/chunk-vendors.fe5a90a6.css rel=stylesheet>
+    <link href=/css/app.666eb4ea.css rel=stylesheet>
   </head>
   <body>
     <noscript>
@@ -13,5 +19,7 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script src=/js/chunk-vendors.7b1fb842.js> </script> 
+    <script src=/js/app.156f5d05.js> </script>
   </body>
 </html>
